<resources>
    <string name="app_name">Project</string>
    <string name="d_button1">Monday</string>
    <string name="d_button2">Tuesday</string>
    <string name="d_button3">Wednesday</string>
    <string name="d_button4">Thursday</string>
    <string name="d_button5">Friday</string>
    <string name="d_button6">Saturday</string>
    <string name="d_button7">Sunday</string>
    <string name="m_button1">January</string>
    <string name="m_button2">February</string>
    <string name="m_button3">March</string>
    <string name="m_button4">April</string>
    <string name="m_button5">May</string>
    <string name="m_button6">June</string>
    <string name="m_button7">July</string>
    <string name="m_button8">August</string>
    <string name="m_button9">September</string>
    <string name="m_button10">October</string>
    <string name="m_button11">November</string>
    <string name="m_button12">December</string>
    <string name="season_button">Season</string>
    <string name="memorise_digits">Memorise Digits</string>
    <string name="clock_button">Clock</string>
    <string name="months_button">Months</string>
    <string name="days_button">Days</string>
    <string name="spelling_button">Spelling</string>
    <string name="directions_Button">Directions</string>
    <string name="days_description">Do you want to learn days of the week? Click on the button!!!</string>
    <string name="main_dialouge2">There is two parts in this game, learning and playing.</string>
    <string name="main_dialouge_4">You can summon me by pressing the \"?\" button on the top right. Good Luck!</string>
    <string name="main_dialouge3">You start with the learning part and learn the concepts! Then put your knowledge to
        test in playing part while playing mini games!!!
    </string>
    <string name="main_dialouge1">Hello! I am Rex and I am here to help you! You can continue the dialogue by clicking
        on me.
    </string>
    <string name="learn_button_text">Learn</string>
    <string name="play_button_text">Play</string>
    <string name="season_image" translatable="false">Season Image</string>
    <string name="prev">Prev.</string>
    <string name="next">Next</string>
    <string name="season_name_spring">Spring</string>
    <string name="season_name_summer">Summer</string>
    <string name="season_name_autumn">Autumn</string>
    <string name="season_name_winter">Winter</string>
    <string name="season_credit_spring">\@anasabdin</string>
    <string name="season_credit_summer">\@anasabdin</string>
    <string name="season_credit_autumn">\@anasabdin</string>
    <string name="season_credit_winter">Credits for winter gif</string>
    <string name="learning_time_rex">Learning Time!</string>
    <string name="months_description">Dive into the world of months and discover each one!</string>
    <string name="seasons_description">Join a vibrant journey through spring, summer, autumn, and winter!</string>
    <string name="directions_description">Navigate the world by learning directions!</string>
    <string name="digits_description">est your memory skills with an exciting digit challenge!</string>
    <string name="memorise_digits_backward">Memorise Digits Backward</string>
    <string name="backward_digits_description">Show your memory abilities in this unique backward challenge!</string>
    <string name="days_dialouge1">Hello, young explorer! Today, we\'re going to learn about the days of the week.
    </string>
    <string name="days_dialouge2">Get ready to embark on a counting adventure!</string>
    <string name="days_dialouge3">We\'ll start from the beginning and go through the days in order. Let\'s dive in!
    </string>
    <string name="months_dialouge1">Welcome, curious learner! Today, we\'ll dive into the world of months.</string>
    <string name="months_dialouge2">Get ready to embark on a journey where we count the months of the year in order.
    </string>
    <string name="months_dialouge3">Let\'s explore the twelve months together!</string>
    <string name="season_dialouge1">Hello, nature enthusiast! It\'s time to learn about the seasons in a fun and
        engaging way.
    </string>
    <string name="season_dialouge2">Through captivating multimedia animations, we\'ll experience the transitions of
        autumn, fall, summer, and spring.
    </string>
    <string name="season_dialouge3">Let\'s discover the joys and changes that each season brings!</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="directions_dialouge1">Welcome, welcome! Look at my brand new and shiny compass and master the art of
        directions.
    </string>
    <string name="directions_dialouge2">You may click on the directions to hear the pronunciation.</string>
    <string name="directions_dialouge3">Let\'s begin our exciting journey into the world of directions!</string>
    <string name="digits_dialouge1">Get ready for a digit memory challenge! Watch closely as the numbers unveil
        themselves on the screen.
    </string>
    <string name="digits_dialouge2">Your mission is to remember each digit in the exact order they appeared. Ready to
        showcase your fantastic memory skills?
    </string>
    <string name="digits_backward_dialouge1">Reverse, reverse! Watch closely as the digits make their appearance.
        Remember them carefully, but this time, we\'re going backward.
    </string>
    <string name="digits_backward_dialouge2">It\'s a memory challenge like no other. Show us your incredible memory
        abilities!
    </string>
    <string name="days_question1">How many days are there in a week?</string>
    <string name="days_question2">Which is the first day of the week?</string>
    <string name="days_question3">Which is the last day of the week?</string>
    <string name="days_question4">Which days belong to weekdays?</string>
    <string name="days_question5">Which days belong to the weekend?</string>
    <string name="days_question6">Which days are considered weekend holidays?</string>
    <string name="days_question7">Which days require going to school?</string>
    <string name="days_question8">Which days have more time to relax at home?</string>
    <string name="days_question9">Which days are in the middle of the week?</string>
    <string name="days_question10">Which days are working days?</string>
    <string name="days_option_1_1">5</string>
    <string name="days_option_1_2">6</string>
    <string name="days_option_1_3">7</string>
    <string name="days_option_2_1">Sunday</string>
    <string name="days_option_2_2">Monday</string>
    <string name="days_option_2_3">Saturday</string>
    <string name="days_option_3_1">Sunday</string>
    <string name="days_option_3_2">Saturday</string>
    <string name="days_option_3_3">Monday</string>
    <string name="days_option_4_1">Monday, Tuesday, Wednesday, Thursday, Friday</string>
    <string name="days_option_4_2">Tuesday, Wednesday, Thursday, Friday, Saturday</string>
    <string name="days_option_4_3">Wednesday, Thursday, Friday, Saturday, Sunday</string>
    <string name="days_option_5_1">Saturday, Sunday</string>
    <string name="days_option_5_2">Sunday, Monday</string>
    <string name="days_option_5_3">Monday, Tuesday</string>
    <string name="days_option_6_1">Saturday, Sunday</string>
    <string name="days_option_6_2">Monday, Tuesday</string>
    <string name="days_option_6_3">Tuesday, Wednesday</string>
    <string name="days_option_7_1">Monday, Tuesday, Wednesday, Thursday, Friday</string>
    <string name="days_option_7_2">Tuesday, Wednesday, Thursday, Friday, Saturday</string>
    <string name="days_option_7_3">Wednesday, Thursday, Friday, Saturday, Sunday</string>
    <string name="days_option_8_1">Tuesday, Wednesday</string>
    <string name="days_option_8_2">Saturday, Sunday</string>
    <string name="days_option_8_3">Wednesday, Thursday</string>
    <string name="days_option_9_1">Thursday</string>
    <string name="days_option_9_2">Wednesday</string>
    <string name="days_option_9_3">Friday</string>
    <string name="days_option_10_1">Monday, Tuesday, Wednesday, Thursday, Friday</string>
    <string name="days_option_10_2">Saturday, Sunday</string>
    <string name="days_option_10_3">Sunday, Monday</string>
    <string name="play_days_dialouge_1">Get ready for a playful journey through the days of the week! Together, we\'ll
        learn to count them in order, starting from Monday all the way to Sunday.
    </string>
    <string name="play_days_dialouge_2">We\'ll discover the unique characteristics of each day and the adventures that
        await.
    </string>
    <string name="play_days_dialouge_3">Let\'s embark on this fun-filled learning experience!</string>
    <string name="play_months_dialouge_1">Are you ready to learn about the months of the year in a fun and interactive
        way?
    </string>
    <string name="play_months_dialouge_2">We\'ll go through the months with a quiz, try to select the correct answer.
    </string>
    <string name="play_months_dialouge_3">+1 points for correct answers -1 for wrong answers!</string>
    <string name="play_months_dialouge_4">Let\'s begin our adventure through the twelve months!</string>
    <string name="months_question_1">Which month comes after January?</string>
    <string name="months_question_2">Which month has 28 or 29 days in a leap year?</string>
    <string name="months_question_3">Which month is the tenth month of the year?</string>
    <string name="months_question_4">Which month has 31 days?</string>
    <string name="months_question_5">Which month is the first month of the year?</string>
    <string name="months_question_6">Which month is known for being the hottest in the Northern Hemisphere?</string>
    <string name="months_question_7">Which month is associated with Halloween?</string>
    <string name="months_question_8">Which month is associated with Thanksgiving in the United States?</string>
    <string name="months_question_9">Which month is known for having the longest day in the Northern Hemisphere?</string>
    <string name="months_question_10">Which month marks the beginning of spring in the Northern Hemisphere?</string>
    <string name="months_option_1_1">February</string>
    <string name="months_option_1_2">March</string>
    <string name="months_option_1_3">April</string>
    <string name="months_option_2_1">February</string>
    <string name="months_option_2_2">March</string>
    <string name="months_option_2_3">December</string>
    <string name="months_option_3_1">October</string>
    <string name="months_option_3_2">November</string>
    <string name="months_option_3_3">September</string>
    <string name="months_option_4_1">January</string>
    <string name="months_option_4_2">March</string>
    <string name="months_option_4_3">May</string>
    <string name="months_option_5_1">January</string>
    <string name="months_option_5_2">February</string>
    <string name="months_option_5_3">December</string>
    <string name="months_option_6_1">July</string>
    <string name="months_option_6_2">August</string>
    <string name="months_option_6_3">September</string>
    <string name="months_option_7_1">October</string>
    <string name="months_option_7_2">November</string>
    <string name="months_option_7_3">December</string>
    <string name="months_option_8_1">November</string>
    <string name="months_option_8_2">December</string>
    <string name="months_option_8_3">October</string>
    <string name="months_option_9_1">June</string>
    <string name="months_option_9_2">July</string>
    <string name="months_option_9_3">August</string>
    <string name="months_option_10_1">March</string>
    <string name="months_option_10_2">April</string>
    <string name="months_option_10_3">May</string>
    <string name="playing_time">Playing Time!</string>
</resources>