<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".SeasonsActivity">

    <ImageView
            android:id="@+id/seasonImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/season_image"
            android:scaleType="centerCrop" />

    <TextView
            android:id="@+id/seasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/joystix"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bone"
            android:fontFamily="@font/joystix"
            android:textColor="@color/black"
            android:text="@string/prev"
            android:textSize="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bone"
            android:fontFamily="@font/joystix"
            android:textColor="@color/black"
            android:text="@string/next"
            android:textSize="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    <TextView
            android:id="@+id/seasonCreditsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/joystix"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="10sp" />
    <ImageButton
            android:onClick="question_mark"
            android:background="@drawable/questionmarkbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/question_mark_button"
            android:layout_alignParentEnd="true"/>

</RelativeLayout>
